fix(css): image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,7 @@ footer p {
     display: inline-block;
     width: 50%;
     float: left;
+    height: 28em;
   }
 
   .one img {
@@ -436,6 +437,7 @@ footer p {
     display: inline-block;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    float: left;
   }
 
   .logo {
@@ -463,7 +465,7 @@ footer p {
   }
 
   nav ol {
-    height: 70px;
+    height: 72px;
     padding-top: 0.75em;
   }
 
@@ -473,7 +475,7 @@ footer p {
 
   nav a {
     vertical-align: middle;
-    margin: 0.5em 0.75em 0 0.75em;
+    margin: 0.5em 0.7em 0 0.7em;
   }
 
   h2 {
@@ -481,12 +483,17 @@ footer p {
   }
 
   .one {
-    width: 30%;
+    width: 33.3%;
   }
 
   .two {
-    width: 30%;
+    width: 33.3%;
     clear: both;
+  }
+
+  .tickets p {
+    max-width: 30em;
+    margin: 0 auto;
   }
 
 }
